traces/bug_280.txt
examples++-load/MUMPS_seq.cpp:234: error: DEAD_STORE
  The value written to &ierr (type int) is never used.
Showing all 1 steps of the trace


examples++-load/MUMPS_seq.cpp:234:5: Write of unused value
232.       id.job=JOB_END;
233.       mumps_c(&id); /* Terminate instance */
234.       int ierr = MPI_Finalize();  
           ^
235.     }
236.   
